--- a/start/index.html
+++ b/start/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Webpack and react</title>
+	<title>Webpack &amp; react</title>
 </head>
 <body>
-	<h1 id="target"></h1>
+	<div id="react-container"></div>
 	<script type="text/javascript" src="./build/bundle.js"></script>
 </body>
 </html>
